Fuzzy logic testing merge (#2)
* Add first fuzzy logic implementation

* Update README.MD

* Change web icon + convert seconds to format: minutes:seconds

* Update .gitignore

* Add progress of recognition

* Update fuzzy logic

* Add progress bar to front

* Update README.md

* Fix bug when db is empty

* Add docker

* Update requirements.txt

* Update README 

Added instructions for using conda to set up the environment with FFMpeg.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,7 +7,9 @@ pydantic[dotenv]
 python-multipart
 pydantic-settings
 torch
+torchvision
 torchaudio
-numpy
+torchcodec[ffmpeg]
 transformers
-torchcodec
+librosa
+soundfile
